--- a/notebooks/diff_fairness_interventions_exp/DIR/DIR_acs_income/ACS_Income_Batch2.ipynb
+++ b/notebooks/diff_fairness_interventions_exp/DIR/DIR_acs_income/ACS_Income_Batch2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "67e70d5e",
+   "id": "2efcfd08",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,8 +12,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "5464ca42",
+   "execution_count": 2,
+   "id": "5063c5cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,8 +22,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "2e88658f",
+   "execution_count": 4,
+   "id": "7fe07040",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,8 +36,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "2d56b933",
+   "execution_count": 1,
+   "id": "aac6da22",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:05.527793Z",
@@ -53,8 +53,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "6361b855",
+   "execution_count": 2,
+   "id": "b9aff400",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:05.533534Z",
@@ -71,8 +71,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "a4f3ff0f",
+   "execution_count": 3,
+   "id": "702deaf1",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:05.543768Z",
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8c1620d",
+   "id": "4ac371de",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -106,8 +106,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "2318f03f",
+   "execution_count": 4,
+   "id": "b0be32c3",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:09.633418Z",
@@ -141,14 +141,14 @@
     "from virny.datasets import ACSIncomeDataset\n",
     "\n",
     "from configs.constants import TEST_SET_FRACTION, EXPERIMENT_SEEDS\n",
-    "from configs.models_config_for_tuning import get_folktables_employment_models_params_for_tuning\n",
+    "from configs.models_config_for_tuning import get_folktables_employment_models_params_for_tuning2\n",
     "\n",
     "from source.experiment_interface import run_exp_iter_with_disparate_impact"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d071309a",
+   "id": "0fdfd214",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -156,8 +156,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "a1873c19",
+   "execution_count": 5,
+   "id": "e648ce65",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:11.810870Z",
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1abab334",
+   "id": "53145891",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -188,8 +188,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "f5fa55ed",
+   "execution_count": 6,
+   "id": "9c640bae",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:13.124574Z",
@@ -203,7 +203,7 @@
        "'fairness_variance'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,8 +218,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "923f544a",
+   "execution_count": 7,
+   "id": "94e0cc1f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:13.476634Z",
@@ -235,8 +235,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "91225ba4",
+   "execution_count": 8,
+   "id": "ae191f29",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:14.215671Z",
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97bcb072",
+   "id": "dc08792f",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -272,8 +272,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "a7569b75",
+   "execution_count": 9,
+   "id": "4c848d28",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:16.851580Z",
@@ -393,7 +393,7 @@
        "4   14   1   1  8300   20    1   2     2    33  20.0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,8 +406,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "4b1daa57",
+   "execution_count": 10,
+   "id": "81726c58",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:16.919735Z",
@@ -421,7 +421,7 @@
        "(15000, 10)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "725ce880",
+   "id": "f61c2c3a",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b9a2649",
+   "id": "e8906900",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -449,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "aa998451",
+   "id": "d8004341",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:19.790527Z",
@@ -466,8 +466,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "76ef37cd",
+   "execution_count": 14,
+   "id": "1314ce87",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:57:19.918638Z",
@@ -482,13 +482,13 @@
     "custom_table_fields_dct['experiment_iteration'] = f'Exp_iter_{exp_iter_num}'\n",
     "\n",
     "exp_iter_data_loader = copy.deepcopy(data_loader)  # Add deepcopy to avoid data leakage\n",
-    "models_params_for_tuning = get_folktables_employment_models_params_for_tuning(experiment_seed)"
+    "models_params_for_tuning = get_folktables_employment_models_params_for_tuning2(experiment_seed)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b9bbb07",
+   "id": "1933dc31",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T17:03:04.842737Z",
@@ -500,7 +500,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-06 12:37:57 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2024-01-06 12:39:47 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -520,7 +520,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "da63d2459cb745f78d638c11eeac9ccb",
+       "model_id": "e8c8671927a549d89f2b9ff883eaa97d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -535,7 +535,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-06 12:37:57 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2024-01-06 12:39:48 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n"
      ]
     },
@@ -561,14 +561,7 @@
       "             4189,  7278, 10642,  5284,  7002, 14642, 10594,  7701,  8686,\n",
       "             8665,  6253],\n",
       "           dtype='int64')\n",
-      "2024/01/06, 12:37:57: Tuning LGBMClassifier...\n",
-      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
-      "2024/01/06, 12:38:19: Tuning for LGBMClassifier is finished [F1 score = 0.7707260767819267, Accuracy = 0.7968888888888888]\n",
-      "\n",
-      "2024/01/06, 12:38:19: Tuning LogisticRegression...\n",
-      "2024/01/06, 12:38:54: Tuning for LogisticRegression is finished [F1 score = 0.7791608697565473, Accuracy = 0.8030222222222223]\n",
-      "\n",
-      "2024/01/06, 12:38:54: Tuning RandomForestClassifier...\n"
+      "2024/01/06, 12:39:48: Tuning MLPClassifier...\n"
      ]
     }
    ],
@@ -591,7 +584,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5ed66e7",
+   "id": "968826ed",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -600,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "0e7d6ecd",
+   "id": "db5cd1a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -615,13 +608,13 @@
     "custom_table_fields_dct['experiment_iteration'] = f'Exp_iter_{exp_iter_num}'\n",
     "\n",
     "exp_iter_data_loader = copy.deepcopy(data_loader)  # Add deepcopy to avoid data leakage\n",
-    "models_params_for_tuning = get_folktables_employment_models_params_for_tuning(experiment_seed)"
+    "models_params_for_tuning = get_folktables_employment_models_params_for_tuning2(experiment_seed)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6eaeb681",
+   "id": "4aa73c7b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:52.142566Z",
@@ -648,7 +641,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a720e675",
+   "id": "93ddf879",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -657,7 +650,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "310f71b6",
+   "id": "beddfa83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -672,13 +665,13 @@
     "custom_table_fields_dct['experiment_iteration'] = f'Exp_iter_{exp_iter_num}'\n",
     "\n",
     "exp_iter_data_loader = copy.deepcopy(data_loader)  # Add deepcopy to avoid data leakage\n",
-    "models_params_for_tuning = get_folktables_employment_models_params_for_tuning(experiment_seed)"
+    "models_params_for_tuning = get_folktables_employment_models_params_for_tuning2(experiment_seed)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ba84c95d",
+   "id": "2dade395",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:43.318510Z",
@@ -705,7 +698,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a31b463",
+   "id": "16d370c9",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -714,7 +707,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "583e0671",
+   "id": "cc318bea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -729,13 +722,13 @@
     "custom_table_fields_dct['experiment_iteration'] = f'Exp_iter_{exp_iter_num}'\n",
     "\n",
     "exp_iter_data_loader = copy.deepcopy(data_loader)  # Add deepcopy to avoid data leakage\n",
-    "models_params_for_tuning = get_folktables_employment_models_params_for_tuning(experiment_seed)"
+    "models_params_for_tuning = get_folktables_employment_models_params_for_tuning2(experiment_seed)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b3c97dc3",
+   "id": "21de9b1e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:35.100289Z",
@@ -762,7 +755,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e11928f1",
+   "id": "1f529cea",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -771,7 +764,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "1819d7a4",
+   "id": "c01cf66b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -786,13 +779,13 @@
     "custom_table_fields_dct['experiment_iteration'] = f'Exp_iter_{exp_iter_num}'\n",
     "\n",
     "exp_iter_data_loader = copy.deepcopy(data_loader)  # Add deepcopy to avoid data leakage\n",
-    "models_params_for_tuning = get_folktables_employment_models_params_for_tuning(experiment_seed)"
+    "models_params_for_tuning = get_folktables_employment_models_params_for_tuning2(experiment_seed)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c3de7bc3",
+   "id": "096c0055",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:26.281220Z",
@@ -819,7 +812,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb547bde",
+   "id": "f58b2f26",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -828,7 +821,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "f17439ab",
+   "id": "0cef34c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -843,13 +836,13 @@
     "custom_table_fields_dct['experiment_iteration'] = f'Exp_iter_{exp_iter_num}'\n",
     "\n",
     "exp_iter_data_loader = copy.deepcopy(data_loader)  # Add deepcopy to avoid data leakage\n",
-    "models_params_for_tuning = get_folktables_employment_models_params_for_tuning(experiment_seed)"
+    "models_params_for_tuning = get_folktables_employment_models_params_for_tuning2(experiment_seed)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "950d314f",
+   "id": "f546c3ea",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-06T16:44:16.441883Z",
@@ -877,7 +870,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2bf5e6aa",
+   "id": "4a3a1d70",
    "metadata": {},
    "outputs": [],
    "source": []
